@@ -1,5 +1,5 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
-DIST freenet-sources-v1091.tar.bz2 19549784 RMD160 f41107340c381420f1a796d5206462f28450f45b SHA1 b73feaa104430b4c6018717db1e1cca7f824838a SHA256 6aa07f683ccc2980da8400d657d173c2e8d0f9e12837419dc19811a262c2ffe5
-EBUILD freenet-0.7.1091.ebuild 1838 RMD160 c76a8feae96ae023ebfb7ac7148544353b66b8df SHA1 b208b40e24c63bab6830c4798a821201ddf07dce SHA256 596d01e6b834f11fb882e9bd71c77bba7e7fd27ae7d1c30551e03743712af18d
-MISC ChangeLog 2527 RMD160 d12db0aa9f6a121ca3e847db26df0971afa1b95f SHA1 adfbd4d6059a4bc85f7da28f308db56710997246 SHA256 0ecbcb6fa895c3e8287e004cceec5f6e7c08a3a6b27733d9556d30009ab789bb
+DIST freenet-sources-v1096.tar.bz2 19225416 RMD160 df2d841f3dc98d5b1e7003530994fcee1ce92bc0 SHA1 0bdb12c81454a142a51d109dd54ada52290baecc SHA256 b2d84620116b2358fddf2f2ffc9ba3d22f6f250d0e42c5fce7ddea7519d66ed3
+EBUILD freenet-0.7.1096.ebuild 2010 RMD160 2ccd80e41f430b2f42cc390d23eeeef0259d7fa6 SHA1 75c06e45a3a54b859355250bf5a7f56da2cc466a SHA256 8335bd31766d0ecb1cecd89a629dd952a65591c96ab124339001618f89c4b3de
+MISC ChangeLog 2860 RMD160 940c83504b02d76aa85c5afbe823f170f6a235c2 SHA1 f7d60416530fdd969b2208b8290eda4f7d87272c SHA256 7101941150e3e72ba64b13a52c1ed86f47d2240d25bc743fddd6c8d13a876e82
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
